welcome.lessons.welcome.loopwhile.WhileMoria.scala.error
Balin:8: error: '(' expected but identifier found.
		if estFaceMur{
                   ^Balin:21: error: illegal start of simple expression
}
^