welcome.lessons.welcome.loopwhile.WhileMoria.scala.code
gauche()
gauche() //intitialisation
while(!estFaceMur()){
	
	while(!estSurBiscuit() && !estFaceMur()){
		avance() }
		if estFaceMur{
	
	prendBiscuit()
	recule()

	while(!estSurBiscuit() && !estFaceMur()){
		recule()
	}
	avance()
	if (porteBiscuit()) {
	poseBiscuit()
	avance() }}
		
}
droite()
avance()
gauche()
avance()

